k8s-apps/networkpolicy/deny-bbox-to-8-8-8-8.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-bbox-to-8-8-8-8
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: bbox
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 8.8.8.8/32
