k8s-apps/networkpolicy/deny-ingress-to-nginx-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-to-nginx-pod
  namespace: default
spec:
  podSelector:
    matchLabels:
      deny: bbox
  policyTypes:
  - Ingress
